# suan-backend-cardano

./: .gitignore  CeleryDockerFile  Dockerfile  DockerfileDatos  LICENSE  README.md  datos.py  inspect.sh  main.py  not_test_inversionista.py  prefectMain.py  project_monitor.py  pyproject.toml  run.sh  signed.py  streamlit.py  suantrazabilidad.py  supervisord.conf  temp.json  test_inversionista.py  utils.py  version.py
alembic/: env.py
alembic/versions/: 045fb5e49992_creation_of_projects_table.py  361bd9798b1e_creation_of_tables.py
copilot/: .workspace
copilot/api/: manifest.yml
copilot/celery/: manifest.yml
copilot/datos/: manifest.yml
copilot/flower/: manifest.yml
copilot/ogmiosbackend/: manifest.yml
copilot/redisbackend/: manifest.yml
copilot/trazabilidad/: manifest.yml
datosapi/: __init__.py  app.py  credendials.ini
datosapi/app/: __init__.py  main.py
datosapi/core/: config.py
datosapi/routers/: __init__.py
datosapi/utils/: __init__.py  security.py
models/: credendials.ini  dblib.py  dbmodels.py
pycardano/backend/: ogmios_v6.py
pycardano_bckp/: __init__.py  address.py  certificate.py  coinselection.py  hash.py  key.py  logging.py  metadata.py  nativescript.py  network.py  plutus.py  pool_params.py  serialization.py  transaction.py  txbuilder.py  types.py  utils.py  witness.py
pycardano_bckp/backend/: base.py  blockfrost.py  cardano_cli.py  kupo.py  ogmios_v5.py  ogmios_v6.py
pycardano_bckp/cip/: cip14.py  cip8.py
pycardano_bckp/crypto/: bech32.py  bip32.py
suantrazabilidadapi/: __init__.py  app.py  credendials.ini  main.py  server.py
suantrazabilidadapi/alembic/: 7920b4839fe5_auto_generated_migration.py  env.py
suantrazabilidadapi/celery/: __init__.py  main.py  tasks.py
suantrazabilidadapi/core/: config.py
suantrazabilidadapi/db/: dblib.py
suantrazabilidadapi/graphql/: oracle_queries.graphql  queries.graphql
suantrazabilidadapi/kobo/: features.py  form.py  kobo_api.py  manager.py  utility.py
suantrazabilidadapi/merkle/: dynamo_bck.py
suantrazabilidadapi/pycardano1/: address.py  certificate.py  coinselection.py  hash.py  key.py  metadata.py  nativescript.py  network.py  plutus.py  pool_params.py  serialization.py  transaction.py  txbuilder.py  utils.py  witness.py
suantrazabilidadapi/utils/: __init__.py  backend_tasks.py  blockchain.py  createKeys.py  exception.py  generic.py  graphqlClass.py  initialize.py  plataforma.py  projectClass.py  qrdbClass.py  response.py  security.py
tests/: temp1.py  test_inversionista.py  test_redeem.py  test_simple.py
tests/contracts/: generate_keys.py  hello_world_lock.py  hello_world_unlock.py
tests/integration/: NOT_test_main.py  test_complexTx.py  test_contracts.py  test_proofs.py  test_signSubmit.py  test_simpleTx.py  test_wallet.py
tests/utils/: __init__.py  mock.py  (+3 more)
(+110 files in other folders)
