[tool.poetry]
name = "suan-trazabilidad"
version = "0.1.0"
description = ""
authors = ["Moxie <moxie@suan.global>"]
readme = "README.md"
packages = [{include = "suan_trazabilidad"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
pydantic = {extras = ["email"], version = "^1.10.7"}
python-decouple = "^3.8"
requests = "^2.30.0"
fastapi = "^0.95.1"
uvicorn = "^0.22.0"
pandas = "<2.0.0"
openpyxl = "^3.1.2"
numpy = "^1.24.3"
pyqldb = "^3.2.3"
passlib = "^1.7.4"
koios-api = "^1.1.0.0"
python-dotenv = "^1.0.0"
python-multipart = "^0.0.6"
boto3 = "^1.34.58"
uplc = "^0.6.7"
opshin = "^0.20.0"
pyaiken = "^0.5.5"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
