[tool.poetry]
name = "suan-trazabilidad"
version = "0.1.0"
description = ""
authors = ["Moxie <moxie@suan.global>"]
readme = "README.md"
packages = [{include = "suan_trazabilidad"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
python-decouple = "^3.8"
requests = "^2.30.0"
uvicorn = "^0.22.0"
pandas = "<2.0.0"
openpyxl = "^3.1.2"
numpy = "^1.24.3"
pyqldb = "^3.2.3"
passlib = "^1.7.4"
koios-api = "^1.1.0.0"
python-dotenv = "^1.0.0"
boto3 = "^1.34.58"
uplc = "^0.6.7"
pyaiken = "^0.5.5"
streamlit = "^1.35.0"
alembic = "^1.13.2"
psycopg2 = "^2.9.9"
rocketry = "^2.5.1"
fastapi = "^0.111.1"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
ogmios = "^1.1.1"
websockets = "^12.0"
opshin = "^0.22.0"


[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
pytest-cov = "^5.0.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
bandit = "^1.7.8"
safety = "^3.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
