[tool.poetry]
name = "suan_backend_cardano"
version = "0.1.0"
description = ""
authors = ["Moxie <moxie@suan.global>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
python-decouple = "^3.8"
requests = "^2.30.0"
uvicorn = "^0.22.0"
openpyxl = "^3.1.2"
pyqldb = "^3.2.3"
python-dotenv = "^1.0.0"
boto3 = "^1.34.58"
pyaiken = "^0.5.5"
fastapi = "^0.111.1"
pydantic = "^2.8.2"
pydantic-settings = "^2.3.4"
ogmios = "^1.1.1"
celery = {extras = ["redis", "sqs"], version = "^5.4.0"}
flower = "^2.0.1"
opshin = "^0.23.1"
pymerkle = { git = "https://github.com/larestrepo/pymerkle.git", branch = "main" }

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
pytest = "^7.3.1"
pytest-cov = "^5.0.0"
isort = "^5.13.2"
flake8 = "^7.0.0"
bandit = "^1.7.8"
safety = "^3.2.0"
watchdog = "^4.0.1"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"